testsuite/tests/typecheck/should_fail/T20666.stderr

T20666.hs:13:10: error: [GHC-39999]
    • Could not deduce ‘Show (T c)’
        arising from the superclasses of an instance declaration
      from the context: (D d, c ~ S d)
        bound by the instance declaration at T20666.hs:13:10-31
      Possible fix:
        If the constraint looks soluble from a superclass of the instance context,
        read 'Undecidable instances and loopy superclasses' in the user manual
    • In the instance declaration for ‘C1 c’

T20666.hs:17:10: error: [GHC-39999]
    • Could not deduce ‘Show (T c)’
        arising from the superclasses of an instance declaration
      from the context: (D d, c ~ S d, c' ~ c)
        bound by the instance declaration at T20666.hs:17:10-40
      Possible fix:
        If the constraint looks soluble from a superclass of the instance context,
        read 'Undecidable instances and loopy superclasses' in the user manual
    • In the instance declaration for ‘C2 c'’
